--- a/account-tax/conf/base/parameters/training.yml
+++ b/account-tax/conf/base/parameters/training.yml
@@ -9,7 +9,7 @@ split:
   test_size: 0.2
   val_size: 0.1
   max_classes: 260
-  labelize_num_proc: 8
+  labelize_num_proc: 16
   extract_ratio: 0.1  # 1% for fast testing
   extract_seed: 42
   stratify_extract: true
@@ -23,22 +23,22 @@ train:
     separator: "| "
     key_value_separator: ":"
     include_column_names: true
-    num_proc: 1
+    num_proc: 16
 
   tokenization:
-    model_name: "Qwen/Qwen3-4B"
+    model_name: "Qwen/Qwen3-8B"  # Upgraded from 4B to 8B
     max_length: 256
     truncation: true
     padding: "longest"
-    num_proc: 1
+    num_proc: 16
     sample_size: 10
     output_dir: "data/06_models/tokenized_datasets"
 
   # Default LoRA configuration (anchored for reuse)
   lora_defaults: &lora_cfg
     task_type: "SEQ_CLS"
-    r: 256
-    lora_alpha: 512
+    r: 128  # Reduced from 256 for Qwen3-8B memory efficiency
+    lora_alpha: 256  # Reduced from 512 (2x rank)
     lora_dropout: 0.05
     target_modules: ["q_proj", "k_proj", "v_proj", "o_proj"]
     layers_to_transform: [28, 29, 30, 31, 32, 33, 34, 35]
@@ -51,43 +51,42 @@ train:
     test_split: "test"
 
   model:
-    name_or_path: "Qwen/Qwen3-4B"
+    name_or_path: "Qwen/Qwen3-8B"  # Upgraded from 4B to 8B
     num_labels: null
     torch_dtype: "bfloat16"
     trust_remote_code: true
-    gradient_checkpointing: true
+    gradient_checkpointing: false  # Disabled: causes 3x slowdown with large batches
 
   training_args:
     output_dir: "data/06_models/checkpoints"
-    num_train_epochs: 1
-    per_device_train_batch_size: 32
-    per_device_eval_batch_size: 32
-    gradient_accumulation_steps: 1
-    learning_rate: 2.0e-5
-    weight_decay: 0.002
-    warmup_ratio: 0.01
+    max_steps: -1  # Disabled: use num_train_epochs instead
+    num_train_epochs: 1  # Full training with 20 epochs
+    per_device_train_batch_size: 8  # Reduced for Qwen3-8B (16→12)
+    per_device_eval_batch_size: 8
+    gradient_accumulation_steps: 4  # Increased to maintain effective batch (2→3)
+    learning_rate: 2.0e-5  # Baseline LR for batch 32
+    weight_decay: 0.002  # Baseline weight decay
+    warmup_ratio: 0.02  # 5% warmup (industry standard for full training)
     lr_scheduler_type: "cosine"
-    eval_strategy: "steps"
-    eval_steps: 2000  # Evaluate every 100 steps for fast testing
-    save_strategy: "steps"
-    save_steps: 2000  # Save every 100 steps for fast testing
-    save_total_limit: 3  # Keep last 3 checkpoints (best will be kept as final model)
+    eval_strategy: "epoch"  # Evaluate every epoch
+    save_strategy: "epoch"  # Save checkpoint every epoch
     logging_steps: 10
-    report_to: ["mlflow"]
+    report_to: [mlflow]  # Disable MLflow for faster benchmark
     bf16: true
     fp16: false
-    gradient_checkpointing: true
-    dataloader_num_workers: 0
+    gradient_checkpointing: false  # Disabled: causes 3x slowdown with large batches
+    dataloader_num_workers: 0  # PyTorch default (single process, no multiprocessing)
     seed: 42
-    load_best_model_at_end: false  # Disabled: causes hang with DeepSpeed + LoRA
-    metric_for_best_model: "accuracy"
-    greater_is_better: true
+    load_best_model_at_end: true  # Load best checkpoint at end
+    metric_for_best_model: "eval_loss"  # Use validation loss for best model
+    greater_is_better: false  # Lower loss is better
 
   loss:
     use_class_weights: true
     class_weight_alpha: 0.3
     class_weight_min: 0.2
     class_weight_max: 8.0
+
 
   lora:
     enable: true
@@ -97,9 +96,9 @@ train:
   deepspeed:
     num_gpus: 4
     config:
-      train_micro_batch_size_per_gpu: 32
-      train_batch_size: 128
-      gradient_accumulation_steps: 1
+      train_micro_batch_size_per_gpu: 8  # Match per_device_train_batch_size
+      train_batch_size: 128  # 16 × 2 (accum) × 4 GPUs
+      gradient_accumulation_steps: 4
       zero_optimization:
         stage: 2
         reduce_scatter: true
@@ -115,6 +114,13 @@ train:
         overlap_comm: true
         contiguous_gradients: true
       gradient_clipping: 1.0
+      optimizer:
+        type: "Adam"  # DeepSpeed will automatically use FusedAdam on GPU
+        params:
+          lr: 2.0e-5  # Baseline LR for batch 32
+          betas: [0.9, 0.999]
+          eps: 1.0e-8
+          weight_decay: 0.002  # Baseline weight decay
       bf16:
         enabled: true
       fp16:
