--- a/account-tax/conf/base/parameters/training.yml
+++ b/account-tax/conf/base/parameters/training.yml
@@ -10,7 +10,7 @@ split:
   val_size: 0.025
   max_classes: 260
   labelize_num_proc: 16
-  extract_ratio: 0.01  # 1% for 10-minute testing
+  extract_ratio: 1.0  # 1% for 10-minute testing
   extract_seed: 42
   stratify_extract: true
 
@@ -59,8 +59,8 @@ train:
 
   training_args:
     output_dir: "data/06_models/checkpoints"
-    max_steps: 150  # 10-minute test: 150 steps total
-    num_train_epochs: -1  # Disabled: use max_steps instead
+    max_steps: -1  # Disabled: use num_train_epochs instead
+    num_train_epochs: 3  # Train for 3 complete epochs (approx 69k steps total)
     per_device_train_batch_size: 8  # Reduced for Qwen3-8B (16→12)
     per_device_eval_batch_size: 8
     gradient_accumulation_steps: 4  # Increased to maintain effective batch (2→3)
@@ -70,9 +70,9 @@ train:
     lr_scheduler_type: "cosine"
     max_grad_norm: 2.0  # Match DeepSpeed gradient_clipping value
     eval_strategy: "steps"  # Evaluate every N steps
-    eval_steps: 50  # 10-minute test: eval at step 50, 100, 150
+    eval_steps: 7500  # Evaluate every 7,500 steps (aligned with checkpoint cadence)
     save_strategy: "steps"  # Save checkpoint every N steps
-    save_steps: 50  # 10-minute test: save at step 50, 100
+    save_steps: 7500  # Save checkpoint every 7,500 steps
     save_total_limit: 3  # Keep only the latest 3 checkpoints
     logging_steps: 10
     report_to: [mlflow]  # Disable MLflow for faster benchmark
@@ -100,9 +100,6 @@ train:
   deepspeed:
     num_gpus: 4
     config:
-      train_micro_batch_size_per_gpu: 8  # Match per_device_train_batch_size
-      train_batch_size: 128  # 8 × 4 (accum) × 4 GPUs
-      gradient_accumulation_steps: 4
       zero_optimization:
         stage: 2
         reduce_scatter: true
@@ -117,18 +114,12 @@ train:
         reduce_bucket_size: 2e8
         overlap_comm: true
         contiguous_gradients: true
-      gradient_clipping: 2.0
       optimizer:
         type: "Adam"  # DeepSpeed will automatically use FusedAdam on GPU
         params:
-          lr: 2.0e-5  # Baseline LR for batch 32
           betas: [0.9, 0.999]
           eps: 1.0e-8
-          weight_decay: 0.002  # Baseline weight decay
-      bf16:
-        enabled: true
-      fp16:
-        enabled: false
+      
       zero_allow_untested_optimizer: true
 
   training_script:
@@ -140,4 +131,4 @@ train:
 
   resume:
     enabled: true
-    checkpoint_path: "data/06_models/checkpoints/checkpoint-50"
+    checkpoint_path: "data/06_models/checkpoints/checkpoint-15000"
