refactor: migrate to Python 3.12 and fix dtype bug
- Migrate to Python 3.12 environment with UV package manager
- Fix dtype parameter bug: use torch_dtype instead of dtype
- Move project files to account-tax/ subdirectory structure
- Update training parameters: gradient_accumulation_steps=6, learning_rate=30e-5
- Freeze requirements with requirements_frozen.txt
- Update .gitignore to exclude large data files and backup folders

--- a/account-tax/.gitignore
+++ b/account-tax/.gitignore
@@ -68,3 +68,6 @@ account-tax/data/
 account-tax/mlruns/
 account-tax/.viz/
 account-tax/profiling_*.json
+
+# Backup folders (exclude large files)
+backup/
