--- a/account-tax/pyproject.toml
+++ b/account-tax/pyproject.toml
@@ -1,19 +1,15 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "account-tax"
 version = "0.1.0"
-description = "Simplified account classification pipeline"
+description = "Account classification pipeline with Kedro"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12,<3.14"
 dependencies = [
-    "kedro>=0.18.0",
-    "kedro-datasets>=1.0.0",
-    "pandas>=1.3.0",
-    "scikit-learn>=1.0.0",
-    "numpy>=1.21.0",
+    "kedro>=1.0.0",
+    "kedro-datasets>=8.1.0",
+    "pandas>=2.3.2",
+    "scikit-learn>=1.7.1",
+    "numpy>=2.2.0",
 ]
 
 [project.optional-dependencies]
@@ -27,6 +23,17 @@ dev = [
 
 [project.scripts]
 account-tax = "account_tax.__main__:main"
+
+[build-system]
+requires = ["setuptools>=68.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.package-dir]
+"" = "src"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["account_tax*"]
 
 [tool.kedro]
 project_name = "account_tax"
